@@ -21,8 +21,12 @@ import org.apache.hadoop.util.ShutdownHookManager
 import org.apache.spark.SparkContext
 import org.apache.spark.rdd.RDD
 import org.apache.spark.sql.Row
+import org.apache.spark.sql.types.{DataType, DataTypes}
 import org.kududb.annotations.InterfaceStability
-import org.kududb.client.{AsyncKuduClient, KuduClient}
+import org.kududb.client.SessionConfiguration.FlushMode
+import org.kududb.client._
+import scala.collection.JavaConverters._
+
 
 /**
   * KuduContext is a serializable container for Kudu client connections.
@@ -72,7 +76,56 @@ class KuduContext(kuduMaster: String) extends Serializable {
   def kuduRDD(sc: SparkContext,
               tableName: String,
               columnProjection: Seq[String] = Nil): RDD[Row] = {
-    new KuduRDD(kuduMaster, 1024*1024*20, columnProjection.toArray, Array(),
+    new KuduRDD(kuduMaster, 1024*1024*20, columnProjection.toArray, columnProjection.toArray, Array(),
                 syncClient.openTable(tableName), this, sc)
   }
+
+  /**
+    * Saves partitions of a dataframe into kudu
+    * @param rows rows to insert or update
+    * @param tableName table to insert or update on
+    */
+  def savePartition(rows: Iterator[Row], tableName: String, performAsUpdate : Boolean = false, errorsCallback: (scala.collection.mutable.Buffer[OperationResponse]) => Unit = null): Unit = {
+    val table: KuduTable = syncClient.openTable(tableName)
+    val session: KuduSession = syncClient.newSession
+    val columns = (table.getSchema.getColumns.asScala).map(_.getName()) // gets the columns in order so the primary key is first
+    while (rows.hasNext) {
+      val dfRow = rows.next()
+      try {
+        session.setFlushMode(FlushMode.AUTO_FLUSH_BACKGROUND)
+
+        var operation: Operation = table.newInsert()
+        if (performAsUpdate) {
+          operation = table.newUpdate()
+        }
+        val kuduRow: PartialRow = operation.getRow
+        for (field <- columns) {
+          val dt: DataType = dfRow.schema.fields(dfRow.schema.fieldIndex(field)).dataType
+          val fieldNames = dfRow.schema.fieldNames
+          if (dfRow.isNullAt(dfRow.schema.fieldIndex(field))) {
+
+          } else dt match {
+            case DataTypes.StringType => kuduRow.addString(field, dfRow.getAs[String](field))
+            case DataTypes.BinaryType => kuduRow.addBinary(field, dfRow.getAs[Array[Byte]](field))
+            case DataTypes.BooleanType => kuduRow.addBoolean(field, dfRow.getAs[Boolean](field))
+            case DataTypes.ByteType => kuduRow.addInt(field, dfRow.getAs[Byte](field))
+            case DataTypes.ShortType => kuduRow.addShort(field, dfRow.getAs[Short](field))
+            case DataTypes.IntegerType => kuduRow.addInt(field, dfRow.getAs[Int](field))
+            case DataTypes.LongType => kuduRow.addLong(field, dfRow.getAs[Long](field))
+            case DataTypes.FloatType => kuduRow.addFloat(field, dfRow.getAs[Float](field))
+            case DataTypes.DoubleType => kuduRow.addDouble(field, dfRow.getAs[Double](field))
+            case _ => throw new RuntimeException(s"No support for Spark SQL type $dt")
+          }
+        }
+        session.apply(operation)
+      } finally {
+        val operationResponse = session.close()
+        if (operationResponse!=null && operationResponse.size()>0 && errorsCallback!=null) {
+          val errors = operationResponse.asScala.filter( operation => operation.hasRowError)
+          errorsCallback(errors)
+        }
+      }
+    }
+  }
+
 }
